# DedeuceRL

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  README_PYPI.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
cliGame/: README.md  __init__.py  __main__.py  game.py  hf_defaults.py
configs/eval/: dedeucerl-mealy.toml
configs/prime-rl/: dedeucerl-mealy.toml
configs/rl/: dedeucerl-mealy-hosted.toml
configs/vf-rl/: dedeucerl-apienv.toml  dedeucerl-mealy.toml
dataset/difficulty_scale/: mealy_s2_b40.json  mealy_s3_b40.json  mealy_s4_b60.json  mealy_s5_b100.json
dataset/leaderboard/: mealy_leaderboard.json
dataset/smoke/: apienv_smoke.json  mealy_smoke.json
dedeucerl/: __init__.py  vf_env.py
dedeucerl/adapters/: __init__.py  gemini.py  openrouter.py
dedeucerl/cli/: __init__.py  aggregate.py  eval.py  eval_parallel.py  generate.py  selfcheck.py
dedeucerl/core/: __init__.py  automata.py  env.py  rubric.py  task_generator.py  transducers.py
dedeucerl/ir/: __init__.py  actions.py  hypotheses.py  mealy.py  registry.py  types.py
dedeucerl/kernel/: __init__.py  mealy.py  registry.py  types.py
dedeucerl/runtime/: __init__.py  episode.py
dedeucerl/skins/: __init__.py  apienv.py  exprpolicy.py  mealy.py  protocol.py
dedeucerl/surface/: __init__.py  dataset.py  prompt.py  tools.py  vf.py
dedeucerl/utils/: __init__.py  episodes.py  errors.py  schema.py
docs/: KERNELS.md  SKINS.md
docs/skin-ideas/: apienv.md  exprpolicy.md  protocol.md
examples/: apienv_basic.py  basic_eval.py
seeds/: apienv_smoke.json  mealy_smoke.json
tests/: test_actions.py  test_aggregate_packaging.py  test_cli.py  test_cli_parallel.py  test_hypotheses.py  test_integration.py  test_kernel_runtime.py  test_skins.py  test_surface_cli.py  test_task_ir.py  test_vf_env.py
